[gd_scene load_steps=21 format=3 uid="uid://cw8ig3qltmnpn"]

[ext_resource type="Script" uid="uid://cyf0xlf1qbwtb" path="res://client.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://b53flbnuabf3r" path="res://chat.gd" id="2_0xm2m"]
[ext_resource type="Script" uid="uid://8ynfdgldeyt8" path="res://mult_bar.gd" id="2_7mycd"]
[ext_resource type="Script" uid="uid://bgqglerkcylxx" path="res://addons/SmoothScroll/SmoothScrollContainer.gd" id="2_efxa6"]
[ext_resource type="Script" uid="uid://ducd800g1nb5c" path="res://characters.gd" id="2_lquwl"]
[ext_resource type="Script" uid="uid://b7h0k2h2qwlqv" path="res://addons/SmoothScroll/scroll_damper/expo_scroll_damper.gd" id="3_dg77c"]
[ext_resource type="Script" uid="uid://chwbirill2t3h" path="res://character_panel.gd" id="4_272bh"]
[ext_resource type="Script" uid="uid://bqvwyo25ntp8a" path="res://channel_panel.gd" id="7_5vw27"]
[ext_resource type="Script" uid="uid://bm6hoo20xctf1" path="res://channels.gd" id="7_kek77"]
[ext_resource type="FontVariation" uid="uid://da01dq10rgfen" path="res://fonts/nunito-regular.tres" id="8_5vw27"]
[ext_resource type="Script" uid="uid://e3wn6gujcd3j" path="res://chat_text_box.gd" id="9_kek77"]

[sub_resource type="Resource" id="Resource_ycdy4"]
script = ExtResource("3_dg77c")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_w48qg"]
script = ExtResource("3_dg77c")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_272bh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bvp3"]
bg_color = Color(1, 1, 1, 0.00392157)
draw_center = false
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 1, 1, 0.156863)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dg77c"]
bg_color = Color(1, 1, 1, 0.196078)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 2
border_color = Color(0.701961, 0.701961, 0.701961, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_efxa6"]
bg_color = Color(1, 1, 1, 1)
draw_center = false
border_width_left = 3
border_color = Color(0.7, 0.7, 0.7, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="Resource" id="Resource_vivmo"]
script = ExtResource("3_dg77c")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="Resource" id="Resource_2cqfq"]
script = ExtResource("3_dg77c")
friction = 4.0
minimum_velocity = 0.4
rebound_strength = 7.0

[sub_resource type="FontVariation" id="FontVariation_kek77"]
base_font = ExtResource("8_5vw27")
spacing_top = -2
spacing_bottom = -2

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0543785, 0.0658058, 0.11595, 1)

[node name="Client" type="Node" parent="."]
script = ExtResource("1_ig7tw")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_efxa6")
wheel_scroll_damper = SubResource("Resource_ycdy4")
dragging_scroll_damper = SubResource("Resource_w48qg")
drag_with_mouse = false
hide_scrollbar_over_time = true
metadata/_custom_type_script = "uid://bgqglerkcylxx"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_right = 3

[node name="Characters" type="HFlowContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5
theme_override_constants/h_separation = 3
theme_override_constants/v_separation = 3
script = ExtResource("2_lquwl")

[node name="CharacterPanel" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters"]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(150, 65)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Auto resting
Auto dungeon
Auto raid"
mouse_filter = 1
mouse_default_cursor_shape = 2
script = ExtResource("4_272bh")

[node name="Panel" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="Hilight" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
visible = false
self_modulate = Color(1, 1, 1, 0.05)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_272bh")

[node name="Border" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")

[node name="StatusBorder" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(0.839216, 0.141176, 0.0666667, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_dg77c")

[node name="ChannelColor" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(0.0627451, 0.823529, 0.458824, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_efxa6")

[node name="Top" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 7.0
offset_top = 2.0
offset_right = -5.0
offset_bottom = 21.0
grow_horizontal = 2
theme_override_constants/separation = 0

[node name="CharIndex" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel/Top"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "1"
vertical_alignment = 2

[node name="punc" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel/Top"]
modulate = Color(1, 1, 1, 0.6)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = ". "
vertical_alignment = 2

[node name="Name" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel/Top"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 12
text = "Character kjhkjhkjhkjhkjkjkj"
text_overrun_behavior = 3

[node name="Status" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel/Top"]
visible = false
modulate = Color(1, 1, 1, 0.501961)
layout_mode = 2
size_flags_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 10
text = "OFFLINE"
horizontal_alignment = 2
uppercase = true

[node name="TrainingProgress" type="ProgressBar" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(0.666343, 0.666343, 0.666343, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 6.0
offset_top = 19.0
offset_right = -4.0
offset_bottom = 32.0
mouse_filter = 1
max_value = 1.0
step = 0.001
value = 0.495
show_percentage = false

[node name="Status1" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
layout_mode = 2
anchor_right = 1.0
offset_left = 8.0
offset_top = 18.0
offset_right = -6.0
offset_bottom = 39.0
mouse_filter = 1
theme_override_font_sizes/font_size = 11
text = "Mining Lv. 398 - 3093x Gold nugget"
text_overrun_behavior = 3

[node name="RestProgress" type="ProgressBar" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(0.408994, 0.667418, 0.845839, 1)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 6.0
offset_top = 35.0
offset_right = -4.0
offset_bottom = 48.0
mouse_filter = 1
max_value = 1.0
step = 0.001
show_percentage = false

[node name="Rested" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
self_modulate = Color(1, 1, 1, 0.551)
layout_mode = 2
anchor_left = 1.0
anchor_right = 1.0
offset_left = -127.0
offset_top = 35.0
offset_right = -6.0
offset_bottom = 56.0
mouse_filter = 1
theme_override_font_sizes/font_size = 10
text = "Rested"
horizontal_alignment = 2
text_overrun_behavior = 3
uppercase = true

[node name="Status2" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
layout_mode = 2
anchor_right = 1.0
offset_left = 8.0
offset_top = 34.0
offset_right = -6.0
offset_bottom = 55.0
mouse_filter = 1
theme_override_font_sizes/font_size = 11
text = "at Atria"
text_overrun_behavior = 3

[node name="ChannelUser" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(1, 1, 1, 0.65)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -17.5
offset_right = 148.0
offset_bottom = -2.0
grow_vertical = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 11
text = "abrokecube: 1 - RavenMMO"

[node name="DesyncAmount" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel"]
modulate = Color(1, 1, 1, 0.495)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -70.0
offset_top = 3.0
offset_right = -7.0
offset_bottom = 18.0
grow_horizontal = 0
mouse_filter = 1
theme_override_font_sizes/font_size = 10
text = "5s"
horizontal_alignment = 2

[node name="Channels" type="HFlowContainer" parent="MarginContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
alignment = 2
script = ExtResource("7_kek77")

[node name="ChannelPanel" type="PanelContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 31)
layout_mode = 2
mouse_default_cursor_shape = 2
script = ExtResource("7_5vw27")

[node name="Hilight" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel"]
visible = false
self_modulate = Color(1, 1, 1, 0.05)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_272bh")

[node name="Border" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1bvp3")

[node name="ChannelColor" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel"]
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_efxa6")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 3

[node name="ChannelIndex" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel/MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "0"

[node name="ChannelName" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "BTMC"

[node name="ChannelCategory" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel/MarginContainer/HBoxContainer/ChannelName"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 13.0
offset_bottom = 28.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 10
text = "Ravenfall"
text_overrun_behavior = 3
uppercase = true

[node name="Panel" type="Panel" parent="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel"]
visible = false
layout_mode = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="MultBar" type="ProgressBar" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer3"]
unique_name_in_owner = true
self_modulate = Color(0.202, 1, 0.16, 1)
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
size_flags_horizontal = 3
max_value = 1.0
step = 0.001
value = 0.895
show_percentage = false
script = ExtResource("2_7mycd")

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer3/MultBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -1.0
offset_right = -2.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 13
text = "1x Exp Multiplier"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="Space" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="Chat" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_0xm2m")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2/Chat"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("2_efxa6")
wheel_scroll_damper = SubResource("Resource_vivmo")
dragging_scroll_damper = SubResource("Resource_2cqfq")
drag_with_mouse = false
hide_scrollbar_over_time = true
metadata/_custom_type_script = "uid://bgqglerkcylxx"

[node name="ChatMessages" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2/Chat/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ChatMessage" type="RichTextLabel" parent="MarginContainer/HSplitContainer/VBoxContainer2/Chat/ScrollContainer/ChatMessages"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
bbcode_enabled = true
text = "[color=ffffff7f]#btmc [color=D2691E][b]abrokecube[/b][color=white]: A fancy chat message (wow!) asdfslkdfjaslkdfjslakdfjsldkfjlaskdjfklsjfjjjjj"
fit_content = true

[node name="Space2" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="ChatTextBox" type="TextEdit" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_kek77")
placeholder_text = "Message or command"
emoji_menu_enabled = false
wrap_mode = 1
scroll_fit_content_height = true
scroll_fit_content_width = true
caret_blink = true
caret_multiple = false
script = ExtResource("9_kek77")

[node name="Settings" type="VBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/Settings/HBoxContainer"]
layout_mode = 2
text = "Address:"

[node name="addressEdit" type="LineEdit" parent="MarginContainer/HSplitContainer/VBoxContainer2/Settings/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "ws://127.0.0.1:9832/"

[node name="apply" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer2/Settings"]
layout_mode = 2
text = "Apply"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="text1" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "Chatting as"

[node name="UserSelect" type="LineEdit" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
placeholder_text = "user"

[node name="text2" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 11
text = "in"

[node name="ChannelSelect" type="LineEdit" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
placeholder_text = "channel"

[node name="nothing" type="Control" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="options" type="Button" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Se."

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HSplitContainer/VBoxContainer2"]
layout_mode = 2

[node name="Status2" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "————————————————————————————————————————————————"
horizontal_alignment = 2
clip_text = true

[node name="BottomStatus" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 11
text = "Avg desync: 4s"

[node name="Status3" type="Label" parent="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer2"]
modulate = Color(1, 1, 1, 0.5)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 10
text = "————————————————————————————————————————————————"
clip_text = true

[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel" to="Client" method="_on_character_panel_pressed"]
[connection signal="pressed_right" from="MarginContainer/HSplitContainer/VBoxContainer/ScrollContainer/MarginContainer/Characters/CharacterPanel" to="Client" method="_on_character_panel_pressed_right"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel" to="Client" method="_on_channel_panel_pressed"]
[connection signal="pressed_right" from="MarginContainer/HSplitContainer/VBoxContainer/Channels/ChannelPanel" to="Client" method="_on_channel_panel_pressed_right"]
[connection signal="resized" from="MarginContainer/HSplitContainer/VBoxContainer2/Chat/ScrollContainer" to="MarginContainer/HSplitContainer/VBoxContainer2/Chat" method="_on_scroll_container_resized"]
[connection signal="text_submitted" from="MarginContainer/HSplitContainer/VBoxContainer2/ChatTextBox" to="Client" method="_on_chat_text_box_text_submitted"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer2/Settings/apply" to="Client" method="_on_apply_pressed"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/VBoxContainer2/HBoxContainer/options" to="Client" method="_on_options_pressed"]
